# hello-wasm3

./: .gitmodules
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/hellowasm3/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni.c  m3
android/app/src/main/java/com/example/hellowasm3/: Fibonacci.kt  KtFib.kt  MainActivity.kt  Wasm.kt
android/app/src/main/java/com/example/hellowasm3/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/app/src/main/res/raw/: helloworld_bg.wasm
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/hellowasm3/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: .gitignore  CMakeLists.txt
cpp/src/: main.cpp
ios/hello-wasm3-ios/hello-wasm3-ios/: Bridging-Header.h  ContentView.swift  HelloWasm3IOS.swift  WasmBridge.swift  wasm.c  wasm.h
ios/hello-wasm3-ios/hello-wasm3-ios.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: main.rs
